Add IPC note into the README